[gd_scene load_steps=4 format=3 uid="uid://bt82ve604ccni"]

[ext_resource type="Script" path="res://scripts/UI/Global/TooltipShower.gd" id="1_us3yq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nde8q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aal17"]
bg_color = Color(0.160784, 0.160784, 0.160784, 0.929412)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(2, 2)

[node name="TooltipShower" type="PanelContainer"]
top_level = true
offset_right = 316.0
offset_bottom = 28.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_nde8q")
script = ExtResource("1_us3yq")

[node name="Tooltip" type="PanelContainer" parent="."]
visible = false
z_index = 50
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aal17")

[node name="MarginContainer" type="MarginContainer" parent="Tooltip"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltip/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TooltipLabel" type="Label" parent="Tooltip/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Tooltip text"
autowrap_mode = 2

[connection signal="HideTooltip" from="." to="." method="_on_hide_tooltip"]
[connection signal="ShowTooltip" from="." to="." method="_on_show_tooltip"]
